actuator config